test/error/CMakeFiles/error_bad_device_api.dir/depend.make
# Empty dependencies file for error_bad_device_api.
# This may be replaced when dependencies are built.
